--- a/AutomationTest/AutomationTest.csproj
+++ b/AutomationTest/AutomationTest.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8E2CA5B9-B3B9-4F6D-A8BB-51E4870C3C60}</ProjectGuid>
+    <ProjectGuid>{5D8B98FF-30E6-42C6-B890-CC9D145EAD89}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Automation</RootNamespace>
-    <AssemblyName>Automation</AssemblyName>
+    <RootNamespace>AutomationTest</RootNamespace>
+    <AssemblyName>AutomationTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,11 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Excel">
-      <HintPath>..\ExternalReferences\Excel.dll</HintPath>
+    <Reference Include="Ploeh.AutoFixture">
+      <HintPath>..\packages\AutoFixture.3.10.1\lib\net40\Ploeh.AutoFixture.dll</HintPath>
     </Reference>
-    <Reference Include="ICSharpCode.SharpZipLib">
-      <HintPath>..\ExternalReferences\ICSharpCode.SharpZipLib.dll</HintPath>
+    <Reference Include="Ploeh.AutoFixture.Xunit">
+      <HintPath>..\packages\AutoFixture.Xunit.3.10.1\lib\net40\Ploeh.AutoFixture.Xunit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,19 +47,43 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConvertToClaimRulesCommand.cs" />
-    <Compile Include="RoleCell.cs" />
-    <Compile Include="GridCoordinate.cs" />
-    <Compile Include="Permission.cs" />
+    <Compile Include="AutoConvertDataAttribute.cs" />
+    <Compile Include="ConvertToClaimRulesCommandTest.cs" />
+    <Compile Include="ConvertToClaimRulesCustomization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RolePermissionClaimRule.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClaimRules.psm1" />
+    <None Include="app.config" />
     <None Include="packages.config" />
-    <None Include="Register-PPJCmdlets.ps1" />
+    <None Include="PPJ rettigheder - alle tildelinger.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="PPJ rettigheder - duplikerede rettigheder.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="PPJ rettigheder - duplikerede rollenavne.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="PPJ rettigheder - ingen tildelinger.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="PPJ rettigheder 2013.10.08.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Automation\Automation.csproj">
+      <Project>{8e2ca5b9-b3b9-4f6d-a8bb-51e4870c3c60}</Project>
+      <Name>Automation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
