--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\..\WebSites\WebSite1\packages.config" />
   <repository path="..\Automation\packages.config" />
   <repository path="..\AutomationTest\packages.config" />
+  <repository path="..\JudexWebAppTest\packages.config" />
+  <repository path="..\WebApplication1\packages.config" />
+  <repository path="..\WebAppTest\packages.config" />
 </repositories>
