--- a/AutomationTest/AutomationTest.csproj
+++ b/AutomationTest/AutomationTest.csproj
@@ -62,6 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Bruger rettigheder 07022014 - alle permissions aktive - ukomplette shortnames.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Bruger rettigheder 07022014 - alle permissions aktive.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Bruger rettigheder 07022014.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
